fixed some images not showing up, added app icon, changed taskbar thumb color

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -69,5 +69,5 @@
     height: 200px;
     margin: 0 auto;
     background-repeat: no-repeat;
-    background-image: var(--url);
+    background-image: var(--celebration);
 }
